--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Score: </h1>
 </body>
 <script src="snake.js"></script>
+<script src="food.js"></script>
 <script src="game.js"></script>
 </html>
